
   LinearVelocity class
      1) Minor update to correct allocating distance objects
         on stack when performing conversions

   List class
      1) Removed the find() member function;
         use the getIndex() member function instead
      2) remove(Object*) -- When the object is not found in the list, it no
         longer unref()'s the object (bug fix)

   SPtr<> template
      1) Added an option flag to constructor to avoid auto
         referencing pointer -- see SPtr.h for documentation
         and examples

   Complex number class
      ## new class derived from Number ##

--------------------------------------------------------------------------------
basicGL

   Graphic class
      1) Removed the Color() function; use setColor() instead


--------------------------------------------------------------------------------
dis

   EmissionPduHandler
      1) started to add slot for beam function.
         as this change will break existing functionality, hold off until a
         compatible change is made

   pdu.h
      1) added Designator PDU

--------------------------------------------------------------------------------
dis simulation


   SynchronizedState class functionality
      1) added/modified these files:
         dis/Nib.h
         dis/NetIO.cpp
         dis/NetIOPlatforms.cpp
         dis/Nib.cpp
         simulation/NetIO.cpp
         simulation/Nib.cpp
         simulation/Player.cpp
      2) SynchronizedState class now used for dead reckoning
      3) NetIO player update correct to "setAngularVelocities" from
         "setGeocAngluarVelocities"
      4) New Lifeform appearance states added
      5) various BaseClass::deleteData() fixed
      6) removed call to clear() from deleteData


--------------------------------------------------------------------------------
Simulation

   Radar class
      1) computeSweepIndex() -- returned to original version (negative azimuth angle bug fix)
